Disjoint well formedness for inline decs